# zkhack-scaffold

./: Cargo.toml  README.md
src/: main.rs
